--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,7 @@
         </project.reporting.sourceEncoding>
         <service-binder.version>0.3</service-binder.version>
         <slf4j.version>1.7.9</slf4j.version>
+        <snakeyaml.version>1.14</snakeyaml.version>
         <spring.version>4.1.3.RELEASE</spring.version>
         <system-rules.version>1.7.0</system-rules.version>
         <versions-maven-plugin.version>2.1</versions-maven-plugin.version>
@@ -269,6 +270,12 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
                 <version>${commons-lang3.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.yaml</groupId>
+                <artifactId>snakeyaml</artifactId>
+                <version>${snakeyaml.version}</version>
             </dependency>
 
             <dependency>
