--- a/util/pom.xml
+++ b/util/pom.xml
@@ -24,6 +24,10 @@
             <artifactId>guava</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+        </dependency>
+        <dependency>
             <groupId>hm.binkley</groupId>
             <artifactId>binkley-testing</artifactId>
             <scope>test</scope>
