--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,7 @@
         <module>xio</module>
         <module>xml</module>
         <module>xprops</module>
+        <module>yaml</module>
     </modules>
 
     <properties>
@@ -237,6 +238,11 @@
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>binkley-xprops</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>binkley-yaml</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
