--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
         <module>spring</module>
         <module>mixin</module>
         <module>util</module>
+        <module>annotation</module>
         <module>concurrent</module>
         <module>convert</module>
         <module>corba</module>
@@ -197,6 +198,11 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>binkley-annotation</artifactId>
+                <version>${project.version}</version>
+            </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>binkley-guice</artifactId>
