--- a/yaml/pom.xml
+++ b/yaml/pom.xml
@@ -28,6 +28,10 @@
             <artifactId>metainf-services</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
         </dependency>
