--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,8 @@
         <maven-failsafe-plugin.version>2.17</maven-failsafe-plugin.version>
         <maven-gpg-plugin.version>1.4</maven-gpg-plugin.version>
         <maven-jar-plugin.version>2.4</maven-jar-plugin.version>
+        <maven-java-formatter-plugin.version>0.4
+        </maven-java-formatter-plugin.version>
         <maven-javadoc-plugin.version>2.9.1</maven-javadoc-plugin.version>
         <maven-release-plugin.version>2.4.1</maven-release-plugin.version>
         <maven-source-plugin.version>2.2.1</maven-source-plugin.version>
