--- a/pom.xml
+++ b/pom.xml
@@ -97,9 +97,9 @@
 
     <properties>
         <!-- @formatter:off -->
-        <buildplan-maven-plugin.version>1.1</buildplan-maven-plugin.version>
+        <buildplan-maven-plugin.version>1.2</buildplan-maven-plugin.version>
         <commons-lang3.version>3.4</commons-lang3.version>
-        <curator.version>3.0.0</curator.version>
+        <curator.version>3.1.0</curator.version>
         <freemarker.version>2.3.23</freemarker.version>
         <generateBackupPoms>false</generateBackupPoms>
         <guava.version>19.0</guava.version>
@@ -114,12 +114,12 @@
         <java.charset>UTF-8</java.charset>
         <java.version>8</java.version>
         <jgitflow-maven-plugin.version>1.0-m5.1</jgitflow-maven-plugin.version>
-        <jmockit.version>1.20</jmockit.version>
-        <jnr.version>3.0.23</jnr.version>
+        <jmockit.version>1.22</jmockit.version>
+        <jnr.version>3.0.27</jnr.version>
         <jopt-simple.version>4.9</jopt-simple.version>
         <jsr305.version>3.0.1</jsr305.version>
         <junit.version>4.12</junit.version>
-        <logback.version>1.1.3</logback.version>
+        <logback.version>1.1.6</logback.version>
         <lombok.version>1.16.6</lombok.version>
         <maven-clean-plugin.version>2.6.1</maven-clean-plugin.version>
         <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
@@ -133,11 +133,11 @@
         <maven-release-plugin.version>2.5.2</maven-release-plugin.version>
         <maven-source-plugin.version>2.4</maven-source-plugin.version>
         <maven.version>3.1</maven.version>
-        <metainf-services.version>1.6</metainf-services.version>
-        <mockito.version>2.0.33-beta</mockito.version>
+        <metainf-services.version>1.7</metainf-services.version>
+        <mockito.version>2.0.43-beta</mockito.version>
         <nexus-staging-maven-plugin.version>1.6.6</nexus-staging-maven-plugin.version>
         <owner.version>1.0.9</owner.version>
-        <okhttp.version>2.7.0</okhttp.version>
+        <okhttp.version>2.7.5</okhttp.version>
         <pojo-mbean.version>1.1</pojo-mbean.version>
         <project.build.outputEncoding>${java.charset}</project.build.outputEncoding>
         <project.build.sourceEncoding>${java.charset}</project.build.sourceEncoding>
@@ -145,11 +145,11 @@
         <project.reporting.sourceEncoding>${java.charset}</project.reporting.sourceEncoding>
         <reactor.version>2.0.7.RELEASE</reactor.version>
         <service-binder.version>0.3</service-binder.version>
-        <slf4j.version>1.7.13</slf4j.version>
-        <snakeyaml.version>1.16</snakeyaml.version>
-        <spring-boot.version>1.3.1.RELEASE</spring-boot.version>
-        <spring.version>4.2.4.RELEASE</spring.version>
-        <system-rules.version>1.15.1</system-rules.version>
+        <slf4j.version>1.7.18</slf4j.version>
+        <snakeyaml.version>1.17</snakeyaml.version>
+        <spring-boot.version>1.3.3.RELEASE</spring-boot.version>
+        <spring.version>4.2.5.RELEASE</spring.version>
+        <system-rules.version>1.16.0</system-rules.version>
         <versions-maven-plugin.version>2.2</versions-maven-plugin.version>
         <!-- @formatter:on -->
     </properties>
@@ -551,6 +551,11 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>versions-maven-plugin</artifactId>
                 <version>${versions-maven-plugin.version}</version>
+                <configuration>
+                    <rulesUri>
+                        file://${session.executionRootDirectory}/maven-version-rules.xml
+                    </rulesUri>
+                </configuration>
                 <executions>
                     <execution>
                         <id>update-dependencies</id>
